# nix-forecast

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  flake.nix  overlay.nix
.github/: dependabot.yml
.github/workflows/: ci.yaml  clippy.yaml  publish.yml  update-flake.yaml
nix/: package.nix
src/: cli.rs  command.rs  http.rs  main.rs  nix.rs
